--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,18 @@ p {
   text-align: center;
 }
 
+.full-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 75%;
+  height: 75%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center'
+  pointer-events: none;
+}
+
 .full-image {
   position: fixed;
   top: 50%;
